# AlgoBox

./: CMakeLists.txt  README.md
examples/: binary_search.cpp  bubble_sort.cpp  insertion_sort.cpp  linear_search.cpp  linear_search_recursive.cpp  merge_sort.cpp  quick_sort.cpp  selection_sort.cpp
include/: algobox.hpp  algobox_dict.hpp  algobox_vector.hpp  exceptions.hpp  gui.hpp  handler.hpp  search_handler.hpp
include/gui/: screen_search.hpp  screen_sort.hpp  utils.hpp
tests/: CMakeLists.txt  test_core.cpp  test_vector.cpp
